@@ -1,4 +1,4 @@
-/* $Id: minisoap.c,v 1.18 2009/12/04 11:29:18 nanard Exp $ */
+/* $Id: minisoap.c,v 1.19 2010/04/12 20:39:41 nanard Exp $ */
 /* Project : miniupnp
  * Author : Thomas Bernard
  * Copyright (c) 2005-2009 Thomas Bernard
@@ -75,7 +75,8 @@ int soapPostSubmit(int fd,
 				   const char * host,
 				   unsigned short port,
 				   const char * action,
-				   const char * body)
+				   const char * body,
+				   const char * httpversion)
 {
 	int bodysize;
 	char headerbuf[512];
@@ -93,8 +94,7 @@ int soapPostSubmit(int fd,
 	if(port != 80)
 		snprintf(portstr, sizeof(portstr), ":%hu", port);
 	headerssize = snprintf(headerbuf, sizeof(headerbuf),
-/*                       "POST %s HTTP/1.1\r\n" */
-                       "POST %s HTTP/1.0\r\n"
+                       "POST %s HTTP/%s\r\n"
 	                   "Host: %s%s\r\n"
 					   "User-Agent: " OS_STRING ", UPnP/1.0, MiniUPnPc/" MINIUPNPC_VERSION_STRING "\r\n"
 	                   "Content-Length: %d\r\n"
@@ -104,7 +104,7 @@ int soapPostSubmit(int fd,
 					   "Cache-Control: no-cache\r\n"	/* ??? */
 					   "Pragma: no-cache\r\n"
 					   "\r\n",
-					   url, host, portstr, bodysize, action);
+					   url, httpversion, host, portstr, bodysize, action);
 #ifdef DEBUG
 	printf("SOAP request : headersize=%d bodysize=%d\n",
 	       headerssize, bodysize);
